--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="images/lg.png" alt="IES Arxiduc Lluís Salvador">
     </div>
     <div class="topnav">
-        <a href="biblioteca.html">Inici</a>
+        <a href="index.html">Inici</a>
         <a href="activitats.html">Activitats</a>
         <a href="eduteca.html">Eduteca</a>
         <a href="abiesweb.html">Fons bibliogràfic</a>
