--- a/clublectura.html
+++ b/clublectura.html
@@ -23,7 +23,7 @@
     </div> 
     <div class="row">
         <div class="column">
-            <h1>Club de lectura</h1>
+            <h1>Club lectura</h1>
             <div class="card">
                 <p class="normal"></p>
             </div>
