añadir fotos en el inicio y pla lector

--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
         <div class="column side">
             <div class="card">
                 <ul><li><h2>Contacte</h2></li></ul>
-                <p class="normal">Correu electrònic: biblioteca@iesarxiduc.net</p>
-                <p class="normal">Coordinadora: Belén González Jiménez</p>
+                <table>
+                    <th>
+                        <td><p class="normal">Correu electrònic: biblioteca@iesarxiduc.net</p>
+                            <p class="normal">Coordinadora: Belén González Jiménez</p></td>
+                        <td><img src="images/llegir ens fa més lliure.jpg" alt="" style="width: 100%; object-fit: contain;"></td>
+                    </th>
+                </table>
             </div>
             <div class="card">
                 <ul><li><h2>Préstec</h2></li></ul>
