--- a/plalector.html
+++ b/plalector.html
@@ -38,52 +38,59 @@
                 <h3>Relació de les temàtiques mensuals</3>
                     <p></p>
                 <div id="overflowTest">
-                    <table border="1">
+                    <table>
                         <tr>
-                            <th>Mes</th>
-                            <th>Celebració/Temàtica</th>
-                        </tr>
-                        <tr>
-                            <td>Setembre</td>
-                            <td>Acollida alumnat</td>
-                        </tr>
-                        <tr>
-                            <td rowspan="2">Octubre</th>
-                            <td>Festa de la tardor</td>
-                        <tr>
-                            <td>Dia Internacional de les biblioteques escolars</td>
-                        </tr>
-                        <tr>
-                            <td>Novembre</td>
-                            <td>25-N</td>
-                        </tr>
-                        <tr>
-                            <td>Desembre</td>
-                            <td>Nadal</td>
-                        </tr>
-                        <tr>
-                            <td>Gener</td>
-                            <td>Sant Antoni i Sant Sebastià</td>
-                        </tr>
-                        <tr>
-                            <td>Febrer</td>
-                            <td>L'amor</td>
-                        </tr>
-                        <tr>
-                            <td>Març</td>
-                            <td>8-M</td>
-                        </tr>
-                        <tr>
-                            <td>Abril</td>
-                            <td>Gala de Sant Jordi</td>
-                        </tr>
-                        <tr>
-                            <td>Maig</td>
-                            <td>LGTBI</td>
-                        </tr>
-                        <tr>
-                            <td>Juny</td>
-                            <td>Dia del Medi Ambient</td>
+                            <th>
+                            <table border="1">
+                                <tr>
+                                    <th>Mes</th>
+                                    <th>Celebració/Temàtica</th>
+                                </tr>
+                                <tr>
+                                    <td>Setembre</td>
+                                    <td>Acollida alumnat</td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2">Octubre</th>
+                                    <td>Festa de la tardor</td>
+                                <tr>
+                                    <td>Dia Internacional de les biblioteques escolars</td>
+                                </tr>
+                                <tr>
+                                    <td>Novembre</td>
+                                    <td>25-N</td>
+                                </tr>
+                                <tr>
+                                    <td>Desembre</td>
+                                    <td>Nadal</td>
+                                </tr>
+                                <tr>
+                                    <td>Gener</td>
+                                    <td>Sant Antoni i Sant Sebastià</td>
+                                </tr>
+                                <tr>
+                                    <td>Febrer</td>
+                                    <td>L'amor</td>
+                                </tr>
+                                <tr>
+                                    <td>Març</td>
+                                    <td>8-M</td>
+                                </tr>
+                                <tr>
+                                    <td>Abril</td>
+                                    <td>Gala de Sant Jordi</td>
+                                </tr>
+                                <tr>
+                                    <td>Maig</td>
+                                    <td>LGTBI</td>
+                                </tr>
+                                <tr>
+                                    <td>Juny</td>
+                                    <td>Dia del Medi Ambient</td>
+                                </tr>
+                            </table>              
+                            </th>
+                            <th><img src="images/20 raons per llegir (2).jpg" alt="" style="object-fit: contain;"></th>
                         </tr>
                     </table>
                 </div>
