--- a/curiositats.html
+++ b/curiositats.html
@@ -26,7 +26,7 @@
             <h1>Curiositats</h1>
             <div class="card">
                 <h2>Juez Calatayud</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/u5r7thnZ6gw?si=E_BQNICPIWx4Dyfb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HDDINvatpE4?si=YRl3ezMDFf-q7DOu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </div>
