subir fotos en el apartado de actividades 24-25

--- a/2024-25.html
+++ b/2024-25.html
@@ -30,6 +30,10 @@
                     <div class="dropdown-content">
                         <p class="normal">Concurs punts de llibres - Els millors llocs per llegir</p>
                         <img src="images/concurs24-25.png" alt="Concurs punts de llibres 2024-25">
+                        <img src="images/concurs24-252.png" alt="Concurs punts de llibres 2024-25">
+                        <img src="images/concurs24-253.png" alt="Concurs punts de llibres 2024-25">
+                        <img src="images/concurs24-254.png" alt="Concurs punts de llibres 2024-25">
+                        <img src="images/concurs24-255.jpg" alt="Concurs punts de llibres 2024-25">
                     </div>
                 </div>
             </div>
@@ -45,7 +49,12 @@
                 <div class="dropdown">
                     <button class="dropbtn"><h2>25N - Promoció racó coeducació</h2></button>
                     <div class="dropdown-content">
-                        <p class="normal"></p>
+                        <img src="images/raco24-25.png" alt="Promoció racó coeducació 2024-25">
+                        <img src="images/raco24-252.png" alt="Promoció racó coeducació 2024-25">
+                        <img src="images/raco24-253.png" alt="Promoció racó coeducació 2024-25">
+                        <img src="images/raco24-254.png" alt="Promoció racó coeducació 2024-25">
+                        <img src="images/raco24-255.png" alt="Promoció racó coeducació 2024-25">
+                        <img src="images/raco24-256.png" alt="Promoció racó coeducació 2024-25">
                     </div>
                 </div>
             </div>
@@ -61,7 +70,11 @@
                 <div class="dropdown">
                     <button class="dropbtn"><h2>Concurs declaracions d'amor</h2></button>
                     <div class="dropdown-content">
-                        <p class="normal"></p>
+                        <img src="images/amor24-25.png" alt="Concurs declaracions d'amor 2024-25">
+                        <img src="images/amor24-252.png" alt="Concurs declaracions d'amor 2024-25">
+                        <img src="images/amor24-253.png" alt="Concurs declaracions d'amor 2024-25">
+                        <img src="images/amor24-254.png" alt="Concurs declaracions d'amor 2024-25">
+                        <img src="images/amor24-255.png" alt="Concurs declaracions d'amor 2024-25">
                     </div>
                 </div>
             </div>
@@ -69,7 +82,10 @@
                 <div class="dropdown">
                     <button class="dropbtn"><h2>El carter de l'amor</h2></button>
                     <div class="dropdown-content">
-                        <p class="normal"></p>
+                        <img src="images/carter24-25.png" alt="El carter de l'amor 2024-25">
+                        <img src="images/carter24-252.png" alt="El carter de l'amor 2024-25">
+                        <img src="images/carter24-253.png" alt="El carter de l'amor 2024-25">
+                        <img src="images/carter24-254.png" alt="El carter de l'amor 2024-25">
                     </div>
                 </div>
             </div>
@@ -85,7 +101,7 @@
                 <div class="dropdown">
                     <button class="dropbtn"><h2>Dia internacional de la poesia</h2></button>
                     <div class="dropdown-content">
-                        <p  class="normal"></p>
+                        <img src="images/poesia24-25.png" alt="Dia internacional de la poesia 2024-25">
                     </div>
                 </div>
             </div>
